# login_reg_flask

./: app.py  config.py  pyproject.toml  readme.md
models/: user.py
templates/: login.html  register.html
