[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Aditya Kumar <adityakumar_me20a8_36@dtu.ac.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
